Upgrade compat to scarthgap and fix build issues
Added scarthgap to compatibility layers and fixed SCM errors
while building AGL components:
"The SRCREV_FORMAT variable must be set when multiple SCMs are used."

Signed-off-by: Leonid Komarianskyi <leonid_komarianskyi@epam.com>
Acked-by: Ruslan Shymkevych <ruslan_shymkevych@epam.com>

--- a/agl_services_build/yocto-layer/meta-google/conf/layer.conf
+++ b/agl_services_build/yocto-layer/meta-google/conf/layer.conf
@@ -9,4 +9,4 @@ BBFILE_PRIORITY_meta-google = "6"
 
 LAYERDEPENDS_meta-google = "clang-layer"
 
-LAYERSERIES_COMPAT_meta-google = "kirkstone"
+LAYERSERIES_COMPAT_meta-google = "kirkstone scarthgap"
